--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -19,7 +19,7 @@ services:
     container_name: mongo-express
     image: mongo-express
     restart: always
-    links:
+    depends_on:
       - mongo-db
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
@@ -28,11 +28,28 @@ services:
       # que se abra mongo-express
       ME_CONFIG_MONGODB_AUTH_USERNAME: admin
       ME_CONFIG_MONGODB_AUTH_PASSWORD: pass
+      # se conecta por la red interna a mongo-db (mongo-db:27017)
       ME_CONFIG_MONGODB_URL: "mongodb://admin:root@mongo-db:27017/flipboard?authSource=admin&directConnection=true"
     ports:
       - 8081:8081
     networks:
       - mynetwork
+
+  api:
+    container_name: api
+    build: ./../Backend
+    depends_on:
+      - mongo-db
+    environment:
+      # se conecta por la red interna a mongo-db (mongo-db:27017)
+      DATABASE_URL: "mongodb://admin:root@mongo-db:27017/flipboard?authSource=admin"
+    ports:
+      - 3100:3100
+    networks:
+      - mynetwork
+    volumes:
+      # Montar el directorio Backend en el contenedor para asi poder modificar el codigo sin tener que reconstruir la imagen
+      - ./../Backend:/app
 
 networks:
   mynetwork:
