--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -12,6 +12,8 @@ services:
       MONGO_REPLICA_PORT: 27017
     ports:
       - 27017:27017
+    volumes:
+      - ../Backend/database/mongodb_files/:/data/db
     networks:
       - mynetwork
 
