--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -56,6 +56,8 @@ services:
   nextjs:
     container_name: frontend
     build: ./../Frontend
+    environment:
+      BACKEND_URL: "http://api:3100"
     ports:
      - 3000:3000
     networks:
