--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,9 +30,11 @@
   "homepage": "https://github.com/alerodriguez01/Flipboard-backend#readme",
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
     "nodemon": "^3.0.1",
