--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,12 +31,14 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.5",
     "@types/express": "^4.17.19",
+    "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
