--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,7 +32,8 @@
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.19",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
+    "@types/validator": "^13.11.5",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
     "ts-node": "^10.9.1",
