--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,8 +30,11 @@
   "homepage": "https://github.com/alerodriguez01/Flipboard-backend#readme",
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "@types/cookie-parser": "^1.4.5",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "validator": "^13.11.0"
   },
@@ -39,6 +42,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.5",
     "@types/express": "^4.17.19",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
     "@types/validator": "^13.11.5",
