--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -45,6 +45,7 @@ services:
     environment:
       # se conecta por la red interna a mongo-db (mongo-db:27017)
       DATABASE_URL: "mongodb://admin:root@mongo-db:27017/flipboard?authSource=admin&directConnection=true"
+      JWT_SECRET_KEY: "3z4OtpfVIEWrSoDWn5PXZ+QOcjYSfLoNNLQcTNRKQw8="
     ports:
       - 3100:3100
     networks:
