--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon --exec ts-node --esm src/index.ts",
     "dev-docker": "nodemon --legacy-watch --exec ts-node --esm src/index.ts"
   },
@@ -42,12 +42,17 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.5",
     "@types/express": "^4.17.19",
+    "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
+    "@types/supertest": "^2.0.15",
     "@types/validator": "^13.11.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
