--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
@@ -47,6 +49,8 @@
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
     "@types/supertest": "^2.0.15",
+    "@types/swagger-jsdoc": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.5",
     "@types/validator": "^13.11.5",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
