change test command to drop database, push schema and run tests

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "docker exec mongo-db mongo flipboard --eval \"db.dropDatabase()\" && docker exec api npx prisma db push --schema=./database/prisma/schema.prisma && jest",
     "dev": "nodemon --exec ts-node --esm src/index.ts",
     "dev-docker": "nodemon --legacy-watch --exec ts-node --esm src/index.ts"
   },
