--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "@types/cookie-parser": "^1.4.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.5",
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.19",
     "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^9.0.4",
