--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -54,17 +54,17 @@ services:
       # Montar el directorio Backend en el contenedor para asi poder modificar el codigo sin tener que reconstruir la imagen
       - ./../Backend:/app
 
-  nextjs:
-    container_name: frontend
-    build: ./../Frontend
-    environment:
-      BACKEND_URL: "http://api:3100"
-    ports:
-     - 3000:3000
-    networks:
-      - mynetwork
-    volumes:
-      - ./../Frontend:/app
+  # nextjs:
+  #   container_name: frontend
+  #   build: ./../Frontend
+  #   environment:
+  #     BACKEND_URL: "http://api:3100"
+  #   ports:
+  #    - 3000:3000
+  #   networks:
+  #     - mynetwork
+  #   volumes:
+  #     - ./../Frontend:/app
 
 networks:
   mynetwork:
