--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,9 +34,11 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
@@ -50,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
+    "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.15",
     "@types/swagger-jsdoc": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.5",
