--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@nextui-org/react": "^2.1.13",
+    "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "zod": "^3.22.4"
   },
   "authors": [
     {
