--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3100
+
+# https://next-auth.js.org/configuration/options#nextauth_secret
+# encriptar JWT
+NEXTAUTH_SECRET=DONiy1htfWkqoyCdNLCNHBo7TySxI71QRv2wrv/DN44=
+# https://next-auth.js.org/configuration/options#nextauth_url
+NEXTAUTH_URL=http://localhost:3000
