--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.16.1",
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.1.13",
     "framer-motion": "^10.16.4",
