--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3100
+NEXT_PUBLIC_BACKEND_ROOM_URL=http://localhost:4000
 
 # https://next-auth.js.org/configuration/options#nextauth_secret
 # encriptar JWT
