--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,12 +13,14 @@
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.1.13",
     "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.4",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-qr-code": "^2.0.12",
     "swr": "^2.2.4",
     "zod": "^3.22.4"
   },
@@ -33,6 +35,7 @@
     }
   ],
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
