--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "playwright test --project chromium --headed"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.16.1",
@@ -37,6 +38,7 @@
     }
   ],
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
