--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:18-alpine
+FROM node:18-alpine as base
 WORKDIR /app
-COPY package*.json ./
-COPY tsconfig.json ./
-RUN npm install
 COPY . .
-CMD [ "npm", "run", "dev" ]
+RUN npm install
+
+FROM base as dev
+CMD [ "npm", "run", "dev" ] 
+
+FROM base as prod
+RUN npm run build
+CMD [ "npm", "run", "start" ]
