--- a/Mural/RoomWebSocket/Dockerfile
+++ b/Mural/RoomWebSocket/Dockerfile
@@ -11,9 +11,15 @@
 
 # EXPOSE 80
 # CMD ["yarn", "start"]
-FROM node:18-alpine
+FROM node:18-alpine as base
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn
 COPY . .
+
+FROM base as dev
 CMD [ "yarn", "start:dev" ]
+
+FROM base as prod
+RUN yarn build
+CMD ["yarn", "start"]
