--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -67,34 +67,40 @@ services:
      - 3000:3000
     networks:
       - mynetwork
-    volumes:
-      - ./../Frontend:/app
-      - /app/node_modules
+    # volumes:
+    #   - ./../Frontend:/app
+    #   - /app/node_modules
 
-  mural-excalidraw:
-    container_name: mural-excalidraw
-    build: ./../Mural/Excalidraw
-    ports:
-      - 4000:4000
-    networks:
-      - mynetwork
-    # Enable this for live reload (tarda bastante en recargar, pero funciona)
-    # environment:
-    #   - VITE_DOCKER=true
-    volumes:
-      - ./../Mural/Excalidraw:/app
-      # exclude node modules
-      - /app/node_modules
-  
   mural-room-web-socket:
     container_name: mural-room-web-socket
-    build: ./../Mural/RoomWebSocket
+    build: 
+      context: ./../Mural/RoomWebSocket
+      target: prod
     ports:
       - 3002:3002
     networks:
       - mynetwork
     # volumes:
     #   - ./../Mural/RoomWebSocket:/app
+
+  mural-excalidraw:
+    container_name: mural-excalidraw
+    build: 
+      context: ./../Mural/Excalidraw
+      # target: prod
+    ports:
+      - 4000:80
+    networks:
+      - mynetwork
+    depends_on:
+      - mural-room-web-socket
+    # Enable this for live reload (tarda bastante en recargar, pero funciona)
+    # environment:
+    #   - VITE_DOCKER=true
+    # volumes:
+    #   - ./../Mural/Excalidraw:/app
+    #   # exclude node modules
+    #   - /app/node_modules
 
 networks:
   mynetwork:
