change env vars for production

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,13 +1,13 @@
 # el prefijo NEXT_PUBLIC_ es necesario para que las variables sean accesibles desde el cliente (browser)
-NEXT_PUBLIC_BACKEND_URL=http://localhost:3100
-NEXT_PUBLIC_MURAL_URL=http://localhost:4000
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=https://w73cf8x5-3100.brs.devtunnels.ms
+NEXT_PUBLIC_MURAL_URL=https://w73cf8x5-4000.brs.devtunnels.ms
+NEXT_PUBLIC_FRONTEND_URL=https://w73cf8x5-3000.brs.devtunnels.ms
 
 # https://next-auth.js.org/configuration/options#nextauth_secret
 # encriptar JWT
 NEXTAUTH_SECRET=DONiy1htfWkqoyCdNLCNHBo7TySxI71QRv2wrv/DN44=
 # https://next-auth.js.org/configuration/options#nextauth_url
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://w73cf8x5-3000.brs.devtunnels.msz
 
 # clave para encriptar JWT que se envia cuando se comparte un curso
 SHARE_CURSO_JWT_KEY=hqq0FBRpkgzStwEuAfkWl1K1uIFZcYRq3MAvYOQ5xvU=
