--- a/Mural/Excalidraw/.env.production
+++ b/Mural/Excalidraw/.env.production
@@ -11,9 +11,9 @@ VITE_APP_PLUS_APP=https://app.excalidraw.com
 
 # Fill to set socket server URL used for collaboration.
 # Meant for forks only: excalidraw.com uses custom VITE_APP_PORTAL_URL flow
-VITE_APP_WS_SERVER_URL=http://localhost:3002
-VITE_FLIPBOARD_FRONTEND_URL=http://localhost:3000
-VITE_FLIPBOARD_BACKEND_URL=http://localhost:3100
+VITE_APP_WS_SERVER_URL=https://w73cf8x5-3002.brs.devtunnels.ms
+VITE_FLIPBOARD_FRONTEND_URL=https://w73cf8x5-3000.brs.devtunnels.ms
+VITE_FLIPBOARD_BACKEND_URL=https://w73cf8x5-3100.brs.devtunnels.ms
 
 VITE_APP_FIREBASE_CONFIG='{"apiKey":"AIzaSyAd15pYlMci_xIp9ko6wkEsDzAAA0Dn0RU","authDomain":"excalidraw-room-persistence.firebaseapp.com","databaseURL":"https://excalidraw-room-persistence.firebaseio.com","projectId":"excalidraw-room-persistence","storageBucket":"excalidraw-room-persistence.appspot.com","messagingSenderId":"654800341332","appId":"1:654800341332:web:4a692de832b55bd57ce0c1"}'
 
