change env vars for production

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_FRONTEND_URL=https://w73cf8x5-3000.brs.devtunnels.ms
 # encriptar JWT
 NEXTAUTH_SECRET=DONiy1htfWkqoyCdNLCNHBo7TySxI71QRv2wrv/DN44=
 # https://next-auth.js.org/configuration/options#nextauth_url
-NEXTAUTH_URL=https://w73cf8x5-3000.brs.devtunnels.msz
+NEXTAUTH_URL=https://w73cf8x5-3000.brs.devtunnels.ms
 
 # clave para encriptar JWT que se envia cuando se comparte un curso
 SHARE_CURSO_JWT_KEY=hqq0FBRpkgzStwEuAfkWl1K1uIFZcYRq3MAvYOQ5xvU=
