fix: add volume btw Backend/calificaciones and container to save calificaciones on production

--- a/docker/compose-production.yaml
+++ b/docker/compose-production.yaml
@@ -46,6 +46,8 @@ services:
       - mongo-db
     ports:
       - 3100:3100
+    volumes:
+      - ../Backend/calificaciones:/app/calificaciones
     networks:
       - mynetwork
 
