--- a/docker/production/compose.yaml
+++ b/docker/production/compose.yaml
@@ -2,7 +2,7 @@ services:
 
   mongo-db:
     container_name: mongo-db
-    build: ./mongodb_rs
+    image: alnrodriguez/flipboard-mongo-db:${FLIPBOARD_VERSION}
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
@@ -10,8 +10,8 @@ services:
       MONGO_INITDB_DATABASE: flipboard
       MONGO_REPLICA_HOST: localhost
       MONGO_REPLICA_PORT: 27017
-    ports:
-      - 27017:27017
+    # ports:
+    #   - 27017:27017
     volumes:
       - ../Backend/database/mongodb_files/:/data/db
     networks:
@@ -39,13 +39,11 @@ services:
 
   api:
     container_name: api
-    build: 
-      context: ./../Backend
-      target: prod
+    image: alnrodriguez/flipboard-backend:${FLIPBOARD_VERSION}
     depends_on:
       - mongo-db
-    ports:
-      - 3100:3100
+    # ports:
+    #   - 3100:3100
     volumes:
       - ../Backend/calificaciones:/app/calificaciones
     networks:
@@ -53,37 +51,51 @@ services:
 
   nextjs:
     container_name: frontend
-    build: 
-      context: ./../Frontend
-      target: prod
-    ports:
-     - 3000:3000
+    image: alnrodriguez/flipboard-frontend:${FLIPBOARD_VERSION}
+    # ports:
+    #  - 3000:3000
     networks:
       - mynetwork
 
   mural-room-web-socket:
     container_name: mural-room-web-socket
-    build: 
-      context: ./../Mural/RoomWebSocket
-      target: prod
-    ports:
-      - 3002:3002
+    image: alnrodriguez/flipboard-mural-room-web-socket:${FLIPBOARD_VERSION}
+    # ports:
+    #   - 3002:3002
     networks:
       - mynetwork
 
   mural-excalidraw:
     container_name: mural-excalidraw
-    build: 
-      context: ./../Mural/Excalidraw
-      dockerfile: Dockerfile.prod
-    ports:
-      - 4000:80
+    image: alnrodriguez/flipboard-mural-excalidraw:${FLIPBOARD_VERSION}
+    # ports:
+    #   - 4000:80
     networks:
       - mynetwork
     depends_on:
       - mural-room-web-socket
+  
+  nginx:
+    image: alnrodriguez/flipboard-nginx:${FLIPBOARD_VERSION}
+    container_name: nginx
+    ports:
+      - 80:8000
+      - 443:443
+      # - 3000:3000
+      # - 3002:3002
+      # - 3100:3100
+      # - 4000:4000
+    volumes:
+      - ../nginx/etc/ssl:/etc/nginx/ssl:ro
+    restart: always
+    depends_on:
+      - api
+      - nextjs
+      - mural-room-web-socket
+      - mural-excalidraw
+    networks:
+      - mynetwork
 
 networks:
   mynetwork:
     driver: bridge
-    
